# distributed_map_reduce

./: .gitignore  CMakeLists.txt  Dockerfile  JobConf.cpp  JobConf.h  LICENSE  MapBase.h  README.md  ReduceBase.h  ValueType.cpp  ValueType.h  json_server.h  main.cpp  map_reduce.cpp  map_reduce.h  map_server.cpp  mapreduce.h  reduce_server.cpp  run_example.sh  util.cpp  util.h
SSH_Node/: Node.h  Scp.cpp
configurator/: JobConfig.cpp  JobConfig.h  MapBase.h  ReduceBase.h  config.cpp  config.h  job_config.h  map_base.h  reduce_base.h  util.h
example/: CMakeLists.txt  config.cpp  input.csv  main.cpp
example/sum_of_squares/: CMakeLists.txt  config.cpp  input.csv  main.cpp
example/word_counter/: CMakeLists.txt  config.cpp  main.cpp
example/word_counter/data/: input_1.csv  input_2.csv  input_3.csv  input_4.csv
map_node/: map_node.cpp
reduce_node/: concurrent_queue.cpp  concurrent_queue.h  json_server.h  node.cpp  reduce.cpp  reduce.h  reduce_node.cpp  server.cpp  server.h
ssh/: Node.cpp  Node.h  Scp.cpp  Scp.h  node.cpp  node.h  scp.cpp  scp.h
ssh_node/: Scp.h
types/: KeyValueType.cpp  KeyValueType.h  KeyValueTypeFactory.cpp  KeyValueTypeFactory.h
